# erdo

./: .gitignore  CMakeLists.txt  README.md  build.ps1  erdo_cppcheck.cppcheck  run_tests.ps1
.fleet/: run.json  settings.json
include/: erdo.h
include/allocator/: erdo_cator.h
include/logger/: logger.h  message_templates.h  severity.h
include/math/: Arithmetic.h  Matrix.h  Rational.h  Vector.h
include/metaprogramming/: basic_type_traits.h  compound_type_traits.h
src/: logger.cpp  main.cpp
tests/: BasicTypeTraitsTest.cpp  MatrixTest.cpp  RationalTest.cpp  VectorTest.cpp
